syntax = "proto3";

option csharp_namespace = "ZodiacPrinterClient";

package printer;


service Winter {
  rpc WinterSign (WinterRequest) returns (WinterReply);
}

message WinterRequest {
  string date = 1;
}

message WinterReply {
  string zodiacSign = 1;
}
